Added functionality exports for MSVC

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -221,6 +221,7 @@ set(STLINK_LIB_SHARED ${PROJECT_NAME}-shared)
 
 add_library(${STLINK_LIB_SHARED} SHARED ${STLINK_SOURCE})
 target_include_directories(${STLINK_LIB_SHARED} SYSTEM AFTER PUBLIC ${STLINK_INCLUDE_PATHS})
+target_compile_definitions(${STLINK_LIB_SHARED} PRIVATE STLINK_EXPORT)
 
 set(STLINK_SHARED_VERSION ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}.${PROJECT_VERSION_PATCH})
 message(STATUS "STLINK_LIB_SHARED: ${STLINK_LIB_SHARED}")
@@ -267,6 +268,8 @@ endif()
 
 add_library(${STLINK_LIB_STATIC} STATIC ${STLINK_HEADERS} ${STLINK_SOURCE})
 target_include_directories(${STLINK_LIB_STATIC} SYSTEM AFTER PUBLIC ${STLINK_INCLUDE_PATHS})
+target_compile_definitions(${STLINK_LIB_STATIC} PRIVATE STLINK_EXPORT)
+target_compile_definitions(${STLINK_LIB_STATIC} PUBLIC STLINK_STATIC)
 
 set(STLINK_STATIC_VERSION ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}.${PROJECT_VERSION_PATCH})
 message(STATUS "STLINK_LIB_STATIC: ${STLINK_LIB_STATIC}")
