Added `libusb_project` branch to the github workflows

--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -13,7 +13,7 @@ name: "CodeQL"
 
 on:
   push:
-    branches: [testing, develop, master]
+    branches: [testing, develop, master, libusb_project]
   pull_request:
     # The branches below must be a subset of the branches above
     branches: [testing, develop]
