--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -2,9 +2,9 @@ name: C/C++ CI
 
 on:
   push:
-    branches: [master, develop, testing]
+    branches: [master, develop, testing, libusb_project]
   pull_request:
-    branches: [master, develop, testing]
+    branches: [master, develop, testing, libusb_project]
 
 jobs:
   # Linux
