--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -188,19 +188,13 @@ jobs:
         run: sudo make package
       - name: sudo make uninstall
         run: sudo make uninstall && sudo make clean
-# Linux MinGW cross compliation
-
-# job_linux_22_04_cross:
-#   name: ubuntu-22.04 mingw64
-#   runs-on: ubuntu-22.04
-#   steps:
-#     - uses: actions/checkout@v2
-#     - name: Install dependencies
-#       run: sudo apt-get install gcc-12 libusb-1.0.0-dev libgtk-4-dev rpm mingw-w64
-#     - name: Building Release for Windows (x86-64) ...
-#       run: sudo mkdir -p build-mingw && cd build-mingw && sudo cmake \
-#         -DCMAKE_SYSTEM_NAME=Windows \
-#         -DTOOLCHAIN_PREFIX=x86_64-w64-mingw32 \
-#         -DCMAKE_TOOLCHAIN_FILE=$PWD/../cmake/modules/set_toolchain.cmake \
-#         -DCMAKE_INSTALL_PREFIX=$PWD/install $PWD && \
-#         sudo make && sudo rm -rf build-mingw && cd -
+  
+  job_win_latest_msvc:
+    name: Windows (Latest) MSVC
+    runs-on: windows-latest
+    steps:
+      - uses: ilammy/msvc-dev-cmd@v1.4.1
+      - name: "checkout"
+        uses: actions/checkout@v2
+      - name: compile
+        uses: threeal/cmake-action@v2.0.0
